byfegor-site/src/components/modal.css
.modal-container {
  position: fixed;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
}

.modal-content {
  background-color: white;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);

  display: flex;
  align-items: center;
  gap: 20px;
}
.modal-content {
  img {
    width: 100%;
    height: 30rem;
    object-fit: cover;
    object-position: center;
    margin-bottom: 0;
    border-radius: 1px;
  }
  h2 {
    margin: 0;
  }
  .product-description {
    display: flex;
    flex-direction: column;
    gap: 20px;
    p {
      margin: 0;
      max-width: 500px;
    }
    button {
      background-color: brown;
      color: white;
      border: none;
      padding: 10px 15px;
      border-radius: 5px;
      cursor: pointer;
      color: white;
      border: none;
      padding: 10px 15px;
      border-radius: 5px;
      cursor: pointer;
      width: max-content;

      &:hover {
        background-color: rgb(202, 107, 84);
      }
    }
  }
}

/* media queries */

@media (max-width: 768px) {
  .modal-container {
    padding: 1.5rem;
  }
  .modal-content {
    flex-direction: column;
    height: 70dvh;
  }
}

